# Motor_Drive_Frontend

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dataparser.cpp  dataparser.h  draglistwidget.cpp  draglistwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oscilloscopewidget.cpp  oscilloscopewidget.h  serialmanager.cpp  serialmanager.h
